<resources>
    <string name="app_name">InTroubleApp</string>

    <string name="alert_screen_text">Press in case of trouble</string>
    <string name="alert_after_click_text">Signal has been sent</string>
    <string name="alert_button_description">Alert button</string>
    <string name="settings_button_description">Settings button</string>

    <string name="settings_title">Settings</string>
    <string name="sms_title">Send SMS</string>
    <string name="message_text">Message text</string>
    <string name="receivers">Receivers</string>
    <string name="add_receiver">ADD RECEIVER</string>
    <string name="location_title">Send my location</string>

    <string name="remove_button_description">Remove button</string>
    <string name="add_button_description">Add button</string>
    <string name="name_hint">Name</string>
    <string name="number_hint">Number</string>

    <string name="folders_title">Delete folders</string>
    <string name="folders_list">Paths to folders</string>
    <string name="add_folder">ADD FOLDER</string>
    <string name="incorrect_folder">Incorrect folder. Choose folder from internal storage</string>

    <string name="camera_title">Start camera</string>
    <string name="camera_description">It\'s highly recommended to turn on sync with Google Photos (or other cloud storage). Thus you could save recordings even if they would be removed from device</string>

    <string name="pick_folder_text">Choose directory</string>

</resources>
