<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="46dp"
    android:layout_marginBottom="6dp"
    android:layout_marginTop="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:foreground="?selectableItemBackground"
    android:focusable="true"
    android:clickable="true"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiverNameEdit"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:hint="@string/name_hint"
            tools:text="Long Name"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/receiverNumberEdit"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_marginStart="8dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="8dp"
            android:paddingTop="5dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:hint="@string/number_hint"
            tools:text="+111-234-567-12-34"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.4"/>

        <ImageButton
            android:id="@+id/addReceiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done"
            android:background="@null"
            android:contentDescription="@string/add_button_description"/>

        <ImageButton
            android:id="@+id/removeNewReceiver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:src="@drawable/ic_remove"
            android:background="@null"
            android:contentDescription="@string/remove_button_description"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>